--- a/MyApp/src/app/component/CUSTOMERS/customer-list/customer-list.component.html
+++ b/MyApp/src/app/component/CUSTOMERS/customer-list/customer-list.component.html
@@ -33,7 +33,7 @@
         <td>{{item.u_dateOf_Purchased|date:'dd/MM/yyy'}}</td>
         <td>{{item.u_password}}</td>
         <td style="display: flex">
-          <button type="button" class="btn btn-warning btn-sm" [routerLink]="['edit',item.u_id]">Edit</button>
+          <button type="button" class="btn btn-warning btn-sm" [routerLink]="['edit',item.u_id]" (click)="customerEdit()">Edit</button>
           <button type="button" class="btn btn-danger btn-sm ml-1" (click)="openModal(item)">Delete</button>
         </td>
       </tr>
