--- a/MyApp/src/app/component/SERVICE-ENGG/service-engg-list/service-engg-list.component.html
+++ b/MyApp/src/app/component/SERVICE-ENGG/service-engg-list/service-engg-list.component.html
@@ -29,7 +29,7 @@
           <td>{{item.u_joinDate |date:'dd/MM/yyy'}}</td>
           <td>{{item.u_password}}</td>
           <td style="display: flex">
-              <button type="button" class="btn btn-warning btn-sm" [routerLink]="['edit',item.u_id]">Edit</button>
+              <button type="button" class="btn btn-warning btn-sm" [routerLink]="['edit',item.u_id]" (click)="editServiceEngg()">Edit</button>
               <button type="button" class="btn btn-danger btn-sm ml-1" (click)="openModal(item)" >Delete</button>
           </td>
         </tr>
