--- a/MyApp/src/app/component/customer/update-customer/update-customer.component.css
+++ b/MyApp/src/app/component/customer/update-customer/update-customer.component.css
@@ -8,7 +8,6 @@ h3{
 .btn{
     border-radius: 10px;
 }
-
 .table{
     /* margin-left: 10px; */
     /* margin-right: 10px; */
@@ -19,4 +18,22 @@ h3{
 .form-cpntrol{
     margin: 10px;
     margin-top: 20px;
+}
+/* Edit Button */
+.btn {
+    color: #fff;
+    border-radius: 4px;
+    background: #60c7c1;
+    text-decoration: none;
+    transition: all 0.4s;
+    line-height: normal;
+    min-width: 120px;
+    border: none;
+    min-height: 40px;
+    border-radius: 3px;
+    margin: 0 5px;
+    outline: none !important;
+}
+.btn-success:hover, .btn-success:focus {
+    background: skyblue;
 }
