--- a/MyApp/src/app/component/CUSTOMERS/cust-header/cust-header.component.html
+++ b/MyApp/src/app/component/CUSTOMERS/cust-header/cust-header.component.html
@@ -3,7 +3,6 @@
     <p class="loading">Loading Awesomeness...</p>
 </ngx-spinner>
 
-<body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top row " id="topheader">
         <div class="col-md-8">
@@ -11,14 +10,14 @@
             <div class="collapse navbar-collapse float-left" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                         <a class="navbar-brand"  [class.phase-active]="activeButton === 2" > <i class="fas fa-home"></i>Customer Home</a>                       
+                         <a class="navbar-brand" routerLink="/app-cust-home"(click)="showButton(2)" [class.phase-active]="activeButton === 2" > <i class="fas fa-home"></i>Customer Home</a>                       
                     </li>
                     <li class="nav-item">
-                        <a class="notification" href="#" >
+                        <a class="notification" routerLink="app-cust-raise-complaint"  (click)="loader()" >
                             <i class="fas fa-chalkboard-teacher"></i>Raise Complaint</a>
                     </li>
                     <li class="nav-item">
-                        <a class="notification" id="a1" href="#"> <i class="far fa-clipboard"></i>
+                        <a class="notification" id="a1"  routerLink="app-view-previous-complaint"  (click)="loader()"> <i class="far fa-clipboard"></i>
                View Privios Complaint</a>
                        
                     </li>
@@ -57,4 +56,3 @@
     </button>
 
     </nav>
-   </body>
