--- a/MyApp/src/app/component/header/header.component.html
+++ b/MyApp/src/app/component/header/header.component.html
@@ -1,12 +1,7 @@
-<<<<<<< HEAD
-=======
-
->>>>>>> 1edb25d82ff76a9851b83f139b4f31a2612e6e4e
 <ngx-spinner [fullScreen]="true" type="ball-clip-rotate-multiple" size="medium">
     <p class="loading">Loading Awesomeness...</p>
 </ngx-spinner>
 
-<body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top row " id="topheader">
         <div class="col-md-8">
@@ -21,8 +16,8 @@
                             aria-haspopup="true" aria-expanded="false"><i class="fas fa-users"></i>Customer</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown04">
                             <a class="dropdown-item" routerLink="createcustomer"  (click)="createCustomer()" >Create Customer</a>
-                            <a class="dropdown-item" routerLink="customerdetails">Customer Details</a>
-                            <a class="dropdown-item" routerLink="updateCustomer1">Update Customer</a>
+                            <a class="dropdown-item" routerLink="customerdetails"(click)="customerDetails()">Customer Details</a>
+                            <a class="dropdown-item" routerLink="updateCustomer1" (click)="updateCustomer()">Update Customer</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
@@ -31,8 +26,8 @@
                             Engineer</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown04">
                             <a class="dropdown-item" routerLink="createserviceEngineer" routerLinkActive="active"  [routerLinkActiveOptions]="{ exact: true }" (click)="serviceEngg()">Create Service Engineer</a>
-                            <a class="dropdown-item" routerLink="serviceEngglist">Service Engineer Details</a>
-                            <a class="dropdown-item" routerLink="updateserviceEngineer">Update Service Engineer</a>
+                            <a class="dropdown-item" routerLink="serviceEngglist"(click)="serviceEnggDetail()">Service Engineer Details</a>
+                            <a class="dropdown-item" routerLink="updateserviceEngineer"(click)="serviceEnggUpdate()">Update Service Engineer</a>
                         </div>
                     </li>
 
@@ -41,8 +36,8 @@
                             aria-haspopup="true" aria-expanded="false"> <i class="fas fa-list-ul"></i>
                             Complaints</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown04">
-                            <a class="dropdown-item">View Complaints</a>
-                            <a class="dropdown-item" routerLink="app-assign-complaint" routerLinkActive="active"  [routerLinkActiveOptions]="{ exact: true }" (click)="AssignComplaint()">Assign Complaints</a>
+                            <a class="dropdown-item" routerLink="app-view-all-complaints" (click)="assign_complaint()">View Complaints</a>
+                            <a class="dropdown-item" routerLink="app-assign-complaint" (click)="assign_complaint()">Assign Complaints</a>
                         </div>
                     </li>
 
@@ -80,4 +75,4 @@
     </button>
 
     </nav>
-   </body>
+    
