--- a/MyApp/src/app/component/customer-reg/customer-reg.component.html
+++ b/MyApp/src/app/component/customer-reg/customer-reg.component.html
@@ -74,8 +74,7 @@
 
                         <div class="form-group">
                             <label>Address<p class="p12">*</p></label>
-                            <textarea class="form-control" formControlName="Address"
-                                placeholder="Enter Your Address"
+                            <textarea class="form-control" formControlName="Address" placeholder="Enter Your Address"
                                 [ngClass]="{ 'is-invalid': submitted && f.Address.errors?.invalid }"></textarea>
                         </div>
                         <div class="validation-errors">
@@ -89,9 +88,11 @@
 
                         <div class="form-group">
                             <label>Machine Purchased<p class="p12">*</p></label>
-                            <select  class="form-control" formControlName="Machine_purchase" placeholder="Choose Your Machine">
+                            <select class="form-control" formControlName="Machine_purchase"
+                                placeholder="Choose Your Machine">
                                 <option value="">Choose your Machine</option>
-                                <option *ngFor="let machine of Machinelist;let i=index" value="{{machine.name}}" [selected]="i == 0">{{machine.name}} </option>
+                                <option *ngFor="let machine of Machinelist;let i=index" value="{{machine.name}}"
+                                    [selected]="i == 0">{{machine.name}} </option>
                             </select>
                             <div class="validation-errors">
                                 <ng-container *ngFor="let validation of validation_messages.Machine_purchase">
@@ -102,7 +103,6 @@
                                 </ng-container>
                             </div>
                         </div>
-<<<<<<< HEAD
                         <div class="form-group" id="radiocontrol" fromControlName="machieCondition" >
                             <label id="machine">Purchase Type<p class="p12">*</p></label><br><br>
                             <div class="form-control">
@@ -196,15 +196,6 @@
                                 placeholder="DD/MM/YYYY" bsDatepicker  [bsConfig]="dpconfig"
                                 [maxDate]="maxDate"
                                 [ngClass]="{ 'is-invalid': submitted && f.Datepurchased.errors?.invalid }">
-=======
-
-                        <div class="form-group">
-                            <label>Date Of Purchased<p class="p12">*</p></label>
-                            <input type="text" class="form-control" formControlName="Datepurchased"
-                                placeholder="MM/DD/YYYY" bsDatepicker [bsConfig]="{ isAnimated: true }"
-                                [maxDate]="maxDate" [ngClass]="{ 'is-invalid': submitted && f.Datepurchased.errors?.invalid }">
-                            
->>>>>>> pratik
                         </div>
                         <div class="validation-errors">
                             <ng-container *ngFor="let validation of validation_messages.Datepurchased">
@@ -253,7 +244,8 @@
                             </div>
                         </div>
                         <div class="validation-errors">
-                            <div *ngIf="!alert"  class="alert alert-warning"><strong>Warning! </strong>Passwords must match</div>
+                            <div *ngIf="!alert" class="alert alert-warning"><strong>Warning! </strong>Passwords must
+                                match</div>
                             <ng-container *ngFor="let validation of validation_messages.confirmPassword">
                                 <div class="error-message text-danger"
                                     *ngIf="formGroup.get('confirmPassword').hasError(validation.type) && (formGroup.get('confirmPassword').dirty || formGroup.get('confirmPassword').touched)">
@@ -261,35 +253,9 @@
                                 </div>
                             </ng-container>
                         </div>
-                        <div  id="customerModal" class="modal fade" role="dialog">
-                            <div class="modal-dialog">
-                          
-                              <!-- Modal content-->
-                              <div class="modal-content">
-                                <div class="modal-header">
-                                  <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                  </div>
-                                <div class="modal-body">
-                                    <div class="alert alert-success fade show" *ngIf="showSuccessMsg">
-                                    <strong>Success!</strong>Registration Successfully.
-                                    </div>
-                                    <div class="alert alert-danger fade show" *ngIf="showInvalidMsg">
-                                     <strong>Error!</strong>The email address or phone number you have entered is already registered!       
-                                    </div>
-                                </div>
-                                <div class="modal-footer">
-                                  <button type="button" class="btn btn-dark" data-dismiss="modal">Close</button>
-                                </div>
-                              </div>                        
-                            </div>
-                          </div>                    
                         <div class="form-group">
-<<<<<<< HEAD
                             <button type="submit" class="btn btn-primary" id="RegisterButton"
                                 [disabled]="!formGroup.valid">
-=======
-                            <button type="submit" class="btn btn-primary" id="RegisterButton" data-toggle="modal" data-target="#customerModal "[disabled]="!formGroup.valid">
->>>>>>> pratik
                                 Register
                             </button>
                             <button type="reset" class="btn btn-secondary" id="ResetForm">
