--- a/MyApp/src/app/component/login/login.component.html
+++ b/MyApp/src/app/component/login/login.component.html
@@ -1,74 +1,69 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <ngx-spinner [fullScreen]="true" type="ball-clip-rotate-multiple" size="medium">
-  <p class="loading">Loading Awesomeness...</p>
+    <p class="loading">Loading Awesomeness...</p>
 </ngx-spinner>
 
 <body class="bg">
-  <div class="container">
+    <div class="container">
 
-    <div class="d-flex justify-content-center">
-        <div class="main">        
         <div class="d-flex justify-content-center">
-          <img src="assets\Login.png" alt="HTML5 Icon">
-        </div>
+            <div class="main">
+                <div class="d-flex justify-content-center">
+                    <img src="assets\Login.png" alt="HTML5 Icon">
+                </div>
 
-        <h2> Login</h2>
-        <form id="form_id" class="" name="myform" [formGroup]="formGroup" (ngSubmit)="onSubmit()">
-          <div class="form-group">
-            <label for="exampleInputEmail1">User Name :</label>
-            <input type="text" name="username" class="form-control" formControlName="email" id="username"
-              aria-describedby="emailHelp" placeholder="Enter username">
+                <h2> Login</h2>
+                <form id="form_id" class="" name="myform" [formGroup]="formGroup" (ngSubmit)="onSubmit()">
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">User Name :</label>
+                        <input type="text" name="username" class="form-control" formControlName="email" id="username" aria-describedby="emailHelp" placeholder="Enter username">
 
-          </div>
-          <div class="validation-errors">
-            <ng-container *ngFor="let validation of validation_messages.email">
-              <div class="error-message text-danger"
-                *ngIf="formGroup.get('email').hasError(validation.type) && (formGroup.get('email').dirty || formGroup.get('email').touched)">
-                <span name="information-circle-outline"></span> {{ validation.message }}
-              </div>
-            </ng-container>
-          </div>
-          <div class="form-group">
-            <label for="exampleInputEmail1">Password :</label>
-            <div class="input-group">
-              <input [type]="PasswordfieldTextType ? 'text':'password'" name="password" formControlName="password"
-                class="form-control" id="password" placeholder="Enter password"/>
-            <div class="input-group-prepend">
-                <span class="input-group-text">
+                    </div>
+                    <div class="validation-errors">
+                        <ng-container *ngFor="let validation of validation_messages.email">
+                            <div class="error-message text-danger" *ngIf="formGroup.get('email').hasError(validation.type) && (formGroup.get('email').dirty || formGroup.get('email').touched)">
+                                <span name="information-circle-outline"></span> {{ validation.message }}
+                            </div>
+                        </ng-container>
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Password :</label>
+                        <div class="input-group">
+                            <input [type]="PasswordfieldTextType ? 'text':'password'" name="password" formControlName="password" class="form-control" id="password" placeholder="Enter password" />
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">
                   <i class="fa" [ngClass]="{'fa-eye-slash' : !PasswordfieldTextType,'fa-eye' : PasswordfieldTextType}" id="btn2"
                     (click)="toggleFieldTextType()"></i>
                 </span>
-              </div>
-            </div>
-          </div>
+                            </div>
+                        </div>
+                    </div>
 
-          <div class="validation-errors">
-            <ng-container *ngFor="let validation of validation_messages.password">
-              <p class="error-message text-danger"
-                *ngIf="formGroup.get('password').hasError(validation.type) && (formGroup.get('password').dirty || formGroup.get('password').touched)">
-                <!-- <div class="error-message"
+                    <div class="validation-errors">
+                        <ng-container *ngFor="let validation of validation_messages.password">
+                            <p class="error-message text-danger" *ngIf="formGroup.get('password').hasError(validation.type) && (formGroup.get('password').dirty || formGroup.get('password').touched)">
+                                <!-- <div class="error-message"
                    *ngIf="formGroup.get('password').hasError(validation.type) && (formGroup.get('password').minlength || formGroup.get('password').maxlength)"> -->
 
-                <span name="information-circle-outline"></span> {{ validation.message }}
-              </p>
-            </ng-container>
-          </div>
+                                <span name="information-circle-outline"></span> {{ validation.message }}
+                            </p>
+                        </ng-container>
+                    </div>
 
-          <div *ngIf="alert" class="alert alert-warning alert-dismissible fade show">
-            <strong>Warning!</strong> Please enter a valid value in all the required fields before proceeding.
-          </div>
+                    <div *ngIf="alert" class="alert alert-warning alert-dismissible fade show">
+                        <strong>Warning!</strong> Please enter a valid value in all the required fields before proceeding.
+                    </div>
 
-          <div>
-            <button class="btn btn-primary" type="submit" id="btn1" [disabled]="!formGroup.valid">
+                    <div>
+                        <button class="btn btn-primary" type="submit" id="btn1" [disabled]="!formGroup.valid">
               <!-- <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span> -->
               <b>Login</b>
             </button>
-          </div>
+                    </div>
 
-          <a href="#">Forget Password?</a>
-        </form>
-      </div>
+                    <a href="#">Forget Password?</a>
+                </form>
+            </div>
+        </div>
     </div>
-  </div>
 </body>
-
