--- a/MyApp/src/app/component/view-all-complaints/view-all-complaints.component.css
+++ b/MyApp/src/app/component/view-all-complaints/view-all-complaints.component.css
@@ -1,14 +1,47 @@
 thead {
     color: #337ab7;
-  }
-
-  #r1{
-    background-color: rgb(170, 170, 252) !important;
-  }
-.table{
-  table-layout: fixed !important;
-  width: 100% !important;  
 }
-.container{
-  margin-bottom: 30px !important;
+
+#r1 {
+    background-color: rgb(170, 170, 252) !important;
+}
+
+.table {
+    table-layout: fixed !important;
+    width: 100% !important;
+}
+
+.container {
+    margin-bottom: 30px !important;
+}
+
+.col-md-2 {
+    float: right!important;
+}
+
+button {
+    width: 50px;
+    height: 35px;
+}
+
+.abc {
+    display: block;
+    width: 100%;
+    height: calc(1.5em + .75rem + 2px);
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    -webkit-transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
+button,
+input {
+    overflow: visible;
 }
