--- a/MyApp/src/app/component/CUSTOMERS/customer-list/customer-list.component.html
+++ b/MyApp/src/app/component/CUSTOMERS/customer-list/customer-list.component.html
@@ -1,84 +1,62 @@
-<div class="container">
-  <h3>List All Customer</h3>
-  <div class="input-group">
-    <input type="text" class="form-control" placeholder="Start searching for a customer Name or Mobilenumber or Email"
-      name="search" [(ngModel)]="u_email" autocomplete="off">
-  </div>
+<link href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round" rel="stylesheet">
 
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">Id</th>
-        <th scope="col">Name</th>
-        <th scope="col">Mobile</th>
-        <th scope="col">Email</th>
-        <th scope="col">Address</th>
-        <th scope="col">Machine Purchased</th>
-        <th scope="col">DateOfPurchased</th>
-        <th scope="col">Password</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let item of customersData |searchPipe:u_email;let i=index ">
-        <td>{{item.u_id}}</td>
-        <td>{{item.u_name}}</td>
-        <td>{{item.u_mobile}}</td>
-        <td>{{item.u_email}}</td>
-        <td>{{item.u_address}}</td>
-        <td>{{item.u_MachinePurchased}}</td>
-        <td>{{item.u_dateOf_Purchased|date:'dd/MM/yyy'}}</td>
-        <td>{{item.u_password}}</td>
-        <td style="display: flex">
-          <button type="button" class="btn btn-warning btn-sm" [routerLink]="['edit',item.u_id]" (click)="customerEdit()">Edit</button>
-          <button type="button" class="btn btn-danger btn-sm ml-1" (click)="openModal(item)">Delete</button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<div class="container">
+    <h3>List All Customer</h3>
+    <div class="input-group">
+        <input type="text" class="form-control" placeholder="Start searching for a customer Name or Mobilenumber or Email" name="search" [(ngModel)]="u_email" autocomplete="off">
+    </div>
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Id</th>
+                <th scope="col">Name</th>
+                <th scope="col">Mobile</th>
+                <th scope="col">Email</th>
+                <th scope="col">Address</th>
+                <th scope="col">Machine Purchased</th>
+                <th scope="col">DateOfPurchased</th>
+                <th scope="col">Password</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let item of customersData |searchPipe:u_email;let i=index ">
+                <td>{{item.u_id}}</td>
+                <td>{{item.u_name}}</td>
+                <td>{{item.u_mobile}}</td>
+                <td>{{item.u_email}}</td>
+                <td>{{item.u_address}}</td>
+                <td>{{item.u_MachinePurchased}}</td>
+                <td>{{item.u_dateOf_Purchased|date:'dd/MM/yyy'}}</td>
+                <td>{{item.u_password}}</td>
+                <td style="display: flex">
+                    <button type="button" class="btn btn-warning btn-sm" [routerLink]="['edit',item.u_id]" (click)="customerEdit()">Edit</button>
+                    <button type="button" class="btn btn-danger btn-sm ml-1" (click)="openModal(item)">Delete</button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </div>
 
 <router-outlet></router-outlet>
 
 <div id="deleteModal" class="modal fade" role="dialog">
-  <div class="modal-dialog modal-confirm">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title">Are you sure?</h4>
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-      </div>
-  </div>
-    
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">Id</th>
-          <th scope="col">Name</th>
-          <th scope="col">Mobile</th>
-          <th scope="col">Email</th>
-          <th scope="col">Address</th>
-          <th scope="col">Machine Purchased</th>
-          <th scope="col">DateOfPurchased</th>
-          <th scope="col">Password</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let item of customersData |searchPipe:u_email;let i=index ">
-          <td>{{item.u_id}}</td>
-          <td>{{item.u_name}}</td>
-          <td>{{item.u_mobile}}</td>
-          <td>{{item.u_email}}</td>
-          <td>{{item.u_address}}</td>
-          <td>{{item.u_MachinePurchased}}</td>
-          <td>{{item.u_dateOf_Purchased |date:'dd/MM/yyyy'}}</td>
-          <td>{{item.u_password}}</td>
-          <td style="display: flex">
-              <button type="button" class="btn btn-warning btn-sm" [routerLink]="['edit',item.u_id]">Edit</button>
-              <button type="button" class="btn btn-danger btn-sm ml-1" (click)="delete(item)">Delete</button>
-          </td>
-        </tr>
-      </tbody>
-    </table> 
-    <!-- <button type="button" class="btn btn-success" [routerLink]="[ '/create']">Add Student</button> -->
-  </div>
-
-  <router-outlet></router-outlet>
+    <div class="modal-dialog modal-confirm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Are you sure?</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            </div>
+            <div class="modal-body">
+                <p>Do you really want to delete these records? This process cannot be undone.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-info" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" data-dismiss="modal" name="delete" (click)="delete(item)">Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
